tests/models/enum/unnamed/f64/fail/min_length.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(min_length = 2)]
        f64
    ),
}
fn main() {}
